<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Carrito_Actitvity">

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="241dp"
        android:layout_height="41dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:hint="@string/Nombre"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textAllCaps="true"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextColor"
        android:layout_width="232dp"
        android:layout_height="39dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/Color"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombre" />

    <EditText
        android:id="@+id/editTextCantidad"
        android:layout_width="218dp"
        android:layout_height="39dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Cantidad"
        android:inputType="textPersonName"
        android:textAllCaps="true"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextColor" />

    <EditText
        android:id="@+id/editTextPrecio"
        android:layout_width="221dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Precio"
        android:inputType="textPersonName"
        android:textAllCaps="true"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCantidad" />

    <EditText
        android:id="@+id/editTextTalla"
        android:layout_width="211dp"
        android:layout_height="39dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Talla"
        android:inputType="textPersonName"
        android:textAllCaps="true"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSexo" />

    <EditText
        android:id="@+id/editTextTela"
        android:layout_width="212dp"
        android:layout_height="39dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Tela"
        android:inputType="textPersonName"
        android:textAllCaps="true"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTalla" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="239dp"
        android:layout_height="29dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@android:color/background_dark"
        android:text="@string/Registros_de_productos"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextSexo"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Sexo"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrecio" />

</android.support.constraint.ConstraintLayout>